--- a/sass-snippets.scss
+++ b/sass-snippets.scss
@@ -1,3 +1,16 @@
+//Testing only: applies helper labels to elements on your page. Default setting pulls the class name, but you can target any HTML attribute. 
+//example use only targeting the attr type and leaving the rest default: @include debug-labels($attr-type: attr(data-content));
+@mixin debug-labels($attr-type: attr(class), $debug-font-size: 1em, $debug-color: black, $debug-bg-color: yellow){
+	&:after{
+		content: $attr-type;
+		font-size: $debug-font-size;
+		font-family: serif;
+		color: $debug-color;
+		padding: 0.25em;
+		background-color: $debug-bg-color;
+	}
+}
+
 //Firefox image hover wiggle bug
 .stop-shakira{
 	-moz-backface-visibility: hidden;
