added the background color transparency mixin

--- a/sass-snippets.scss
+++ b/sass-snippets.scss
@@ -116,3 +116,14 @@ input[type=number]::-webkit-inner-spin-button {
 	-webkit-appearance: none; 
 	margin: 0; 
 }
+
+/*===============================================================
+Super handy semi-transparent colors mixin
+===============================================================*/
+@mixin alpha-attribute($attribute, $color, $background) {
+  $percent: alpha($color) * 100%;
+  $opaque: opacify($color, 1);
+  $solid-color: mix($opaque, $background, $percent);
+  #{$attribute}: $solid-color;
+  #{$attribute}: $color;
+}
